# supremo_lite

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/notebooks/: 01_getting_started.doctree  02_personalized_genomes.doctree  03_prediction_alignment.doctree  04_pam_disruption.doctree
.doctrees/user_guide/: mutagenesis.doctree  pam_disruption.doctree  personalization.doctree  prediction_alignment.doctree  prediction_alignment_examples.doctree  variant_centered_sequences.doctree
.github/workflows/: docs.yml  test.yml
_modules/: index.html
_modules/supremo_lite/: chromosome_utils.html  mutagenesis.html  personalize.html  prediction_alignment.html  sequence_utils.html  variant_utils.html
_sources/: index.md.txt
_sources/autoapi/: index.rst.txt
_sources/notebooks/: 01_getting_started.ipynb.txt  02_personalized_genomes.ipynb.txt  03_prediction_alignment.ipynb.txt
_sources/user_guide/: mutagenesis.md.txt  personalization.md.txt  prediction_alignment_examples.md.txt  variant_centered_sequences.md.txt
autoapi/: index.html
autoapi/supremo_lite/: index.html
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
docs/notebooks/: 01_getting_started.ipynb  02_personalized_genomes.ipynb  03_prediction_alignment.ipynb  04_pam_disruption.ipynb  04_structural_variants.ipynb  (+1 more)
notebooks/: 01_getting_started.html  02_personalized_genomes.html  03_prediction_alignment.html  04_pam_disruption.html
tests/: test_bnd_sequence_generation.py  test_bnd_variants.py  test_chromosome_matching.py  test_chunked_processing.py  test_contact_map_alignment.py  test_custom_encoder.py  test_model_prediction_alignment.py  test_pam_disruption.py  test_pam_indel_formation.py  test_personalize_sequences.py  test_prediction_alignment.py  test_saturation_mutagenesis.py  test_sequence_transformations.py  test_structural_variant_verification.py  test_supremo_lite.py  test_sv_edge_cases.py  test_sv_prediction_alignment.py  test_utils.py  test_variant_utils.py
tests/data/bnd/: bnd.vcf  (+2 more)
user_guide/: mutagenesis.html  pam_disruption.html  personalization.html  prediction_alignment.html  prediction_alignment_examples.html  variant_centered_sequences.html
(+76 files in other folders)
