[tool.poetry]
name = "supremo_lite"
version = "0.5.3"
description = "A lightweight memory first, model agnostic version of SuPreMo"
authors = ["Natalie Gill", "Sean Whalen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.13.0"
pandas = ">=1.5.0"
pyfaidx = ">=0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=3.0.0"
notebook = ">=6.0.0"
black = ">=20.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
