[tool.poetry]
name = "supremo_lite"
version = "0.5.4"
description = "A lightweight memory first, model agnostic version of SuPreMo"
authors = ["Natalie Gill", "Sean Whalen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.13.0"
pandas = ">=1.5.0"
pyfaidx = ">=0.7.0"
brisket = {version = ">=0.1.0", optional = true}

[tool.poetry.extras]
fast = ["brisket"]

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=3.0.0"
notebook = ">=6.0.0"
black = ">=20.0.0"
matplotlib = "3.9"
brisket = "^0.1.1"
seaborn = "^0.13.2"
sphinx = "<8.0"
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.1"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
